--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-psutil==5.9.5
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-joblib==1.3.2
-matplotlib==3.7.2
-seaborn==0.12.2
+# Requirements for Portable System Monitor
+# Install with: pip install -r requirements.txt
+
+pyinstaller>=5.0.0
+psutil>=5.9.0
